kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-depl
  labels:
    app: nginx-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: task-pv-storage
        persistentVolumeClaim:
          claimName: nginx-claim0
      - name: task-pv-config-storage
        persistentVolumeClaim:
          claimName: nginx-claim-conf
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
          protocol: TCP
        - containerPort: 80
          protocol: TCP

        volumeMounts:
        - mountPath: "/usr/share/nginx/html" # mount www stuff
          name: task-pv-storage
        - mountPath: "/etc/nginx/conf.d/" #mount config file
          name: task-pv-config-storage
